refactor!: cleanup code, new formatting strategy, add checks and exceptions